# ABU_ROBOCON_2026

r1/ros2_ws/: README.md
r1/ros2_ws/src/launch/: main.launch.py
r1/ros2_ws/src/r1_pkg/: CMakeLists.txt  package.xml
r1/ros2_ws/src/r1_pkg/include/: menual_node.hpp
r1/ros2_ws/src/r1_pkg/src/: canr1_rx.cpp  canr1_tx.cpp  game_pad.cpp  main.cpp  menual_node.cpp  r1_menual.cpp
r1/ros2_ws/src/robot_msg/: CMakeLists.txt  package.xml
r1/ros2_ws/src/robot_msg/msg/: Gamepad.msg  Motor.msg  Pose.msg  Txt.msg  Vel.msg
r1/ros2_ws/src/robot_pkg/: CMakeLists.txt  package.xml
r1/ros2_ws/src/robot_pkg/include/robot_pkg/: ekf_lib.hpp  pose_control_lib.hpp  stm32_status.hpp  trajectory_loader.hpp
r1/ros2_ws/src/robot_pkg/launch/: main.launch.py
r1/ros2_ws/src/robot_pkg/src/: canrx_node.cpp  cantx_node.cpp  ekf_lib.cpp  game_pad.cpp  main_node.cpp  pose_control_lib.cpp  trajectory_loader.cpp
r1/ros2_ws/src/trajectory_file/: retry_task2.txt  task1.txt  task2.txt
